force-app/main/default/objects/current_year_order_summary_vw__x/current_year_order_summary_vw__x.object-meta.xml
<CustomObject>
    <description>current_year_order_summary_vw</description>
    <label>current_year_order_summary_vw</label>
    <pluralLabel>current_year_order_summary_vw</pluralLabel>
</CustomObject>