force-app/main/default/objects/current_year_order_summary_vw__x/fields/customer_po_nbr__c.field-meta.xml
<CustomField>
    <fullName>customer_po_nbr__c</fullName>
    <description>customer_po_nbr</description>
    <label>customer_po_nbr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>