force-app/main/default/objects/current_year_order_summary_vw__x/fields/mth_net_line_order_value__c.field-meta.xml
<CustomField>
    <fullName>mth_net_line_order_value__c</fullName>
    <description>mth_net_line_order_value</description>
    <label>mth_net_line_order_value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>