force-app/main/default/objects/current_year_order_summary_vw__x/fields/order_booked_quater__c.field-meta.xml
<CustomField>
    <fullName>order_booked_quater__c</fullName>
    <description>order_booked_quater</description>
    <label>order_booked_quater</label>
    <length>2</length>
    <type>Text</type>
</CustomField>