force-app/main/default/objects/current_year_order_summary_vw__x/fields/quick_look_id__c.field-meta.xml
<CustomField>
    <fullName>quick_look_id__c</fullName>
    <description>quick_look_id</description>
    <label>quick_look_id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>